html simples montado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    
+    <h1>MEU COFRINHO DE VIAGENS</h1>
+    <p>Meu próximo destino é</p>
+    <input>
+    <p>Eu tenho guardado</p>
+    <input>
+
+    <div>
+        <p>Coverter de</p>
+        <select name="moeda-de">
+            <option>R$  Real brasileiro</option>
+            <option>$  Dólar americano</option>
+            <option>€  Euro</option>
+        </select>
+
+        <p>Coverter para</p>
+        <select name="moeda-para">
+            <option>R$  Real brasileiro</option>
+            <option>$  Dólar americano</option>
+            <option>€  Euro</option>
+        </select>
+
+        <button>Converter</button>
+
+    </div>
 </body>
 </html>
