atualização de layout

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
     <div class="right-box">
         <p>Converter de</p>
-        <select name="moeda-de">
+        <select class="moeda-de">
             <option>R$  Real brasileiro</option>
             <option>$  Dólar americano</option>
             <option>€  Euro</option>
         </select>
         
         <p>Converter para</p>
-        <select name="moeda-para">
+        <select class="moeda-para">
             <option>R$  Real brasileiro</option>
             <option>$  Dólar americano</option>
             <option>€  Euro</option>
