html e css completos

--- a/index.html
+++ b/index.html
@@ -49,11 +49,25 @@
         
         <p>Valor</p>
         <input id="valor">
-
-
         <br>
         <br>
         <button>Converter</button>
+
+        <div class="box-conversao">
+            <img src="./assets/brasil-icon.png" alt="ícone da bandeira do brasil">
+            <p> Real </p>
+            <p> R$ </p>
+
+            <br>
+            <img src="./assets/seta-icon.png">
+            <br>
+
+            <img src="./assets/usa-icon.png">
+            <p> Dólar Americano </p>
+            <p> $ </p>
+
+
+        </div>
     </div>
 
 
